[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["development-tools::testing"]
description = "An RNG that generates 'random' numbers copied from a given buffer. INTENDED FOR TESTING AND FUZZING ONLY!!"
edition = "2018"
keywords = ["fuzzing", "structure-aware", "rng", "random"]
license = "MIT/Apache-2.0"
name = "bufrng"
readme = "README.md"
repository = "https://github.com/fitzgen/bufrng"
version = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.5.1"

[dev-dependencies]
rand = "0.7.0"
quickcheck = "1.0.2"
